# quarto-nb-publish-demo

./: .gitignore  .nojekyll  README.md  about.html  example.html  example2.html  example_links.html  index.html  justfile  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
data/: example.csv
notebooks/: _quarto.yml  about.qmd  example.ipynb  example2.ipynb  example_links.ipynb  index.qmd
